--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A coffeelint rule for requiring JSDoc style comments in coffeescript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers coffee:coffee-script/register --recursive"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/mjstevens777/coffeelint-require-jsdoc#readme",
   "dependencies": {
-    "coffee-script": "*"
+    "coffee-script": "^1.11.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0",
+    "chai": "^3.5.0"
   }
 }
